make coremods POST, add coremod for bypassing defunct auth in indev 20100125 and upwards